# 86400_data_science_i_diplomatura

./: .gitignore  README.md  pyproject.toml
01_transformacion_digital_en_la_industria_4.0 /clase_practica/: python_viz.ipynb
01_transformacion_digital_en_la_industria_4.0/clase_practica/: 00_script_viz.py  01_solucion_heladeria.md  README.md
01_transformacion_digital_en_la_industria_4.0/clase_teorica/: README.md
02_fundamentos_de_python/clase_practica/: README.md  clase_2_practica.ipynb
02_fundamentos_de_python/clase_teorica/: README.md  unidad_2_python.ipynb
03_numpy_y_pandas/clase_practica/: README.md  clase_3_practica.ipynb  ejercicios_clase_practica.ipynb
03_numpy_y_pandas/clase_teorica/: README.md  clase_3_teoria.ipynb
04_manipulacion_de_datos_pandas/clase_practica/: clase_04_practica.ipynb  clase_practica.ipynb
04_manipulacion_de_datos_pandas/clase_teorica/: README.md  clase_04_teorica.ipynb  clase_code.ipynb
05_visualizaciones_avanzadas/clase_practica/: 00_radian.ipynb  01_bokeh.ipynb  05_clase_practica.ipynb  README.md
05_visualizaciones_avanzadas/clase_teorica/: 00_extra_imputers.md  00_imputacion_de_nulls.ipynb  01_viz_avanzadas.ipynb  01_viz_avanzadas.md  README.md
06_estadistica_y_preprocesamiento/clase_practica/: 00_primera_entrega.md  01_practicas.ipynb  02_missing_values.ipynb
06_estadistica_y_preprocesamiento/clase_teorica/: 00_anscombe_sample.ipynb  01_medidas_estadisticas.ipynb  README.md
10_aplicaciones_practicas_de_ml/: README.md  entrega_project_sample.ipynb  feature_selection.md
clase_teorica/: unidad_2_python.ipynb
(+23 files in other folders)
