[project]
name = "86400-data-science-i-diplomatura"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.8.0",
    "category-encoders>=2.9.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "missingno>=0.5.2",
    "nbformat>=5.10.4",
    "pandas>=2.3.2",
    "plotly>=6.3.1",
    "ruff>=0.13.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "xgboost",
    "lightgbm",
    "catboost"
]
